--- a/src/main/webapp/resources/css/userProfile.css
+++ b/src/main/webapp/resources/css/userProfile.css
@@ -29,6 +29,28 @@
     right: 0;
     top: 0;
 }
+
+.profile-img .fileRemove {
+    position: relative;
+    overflow: hidden;
+    margin-top: -60%;
+    width: 70%;
+    border: none;
+    border-radius: 0;
+    font-size: 15px;
+    background: #212529b8;
+}
+.profile-img .fileRemove input {
+    position: absolute;
+    opacity: 0;
+    right: 0;
+    top: 0;
+}
+
+
+
+
+
 .profile-head h5{
     color: #333;
 }
