--- a/src/main/webapp/resources/css/userProfile.css
+++ b/src/main/webapp/resources/css/userProfile.css
@@ -28,6 +28,8 @@
     opacity: 0;
     right: 0;
     top: 0;
+    width:100%;
+    height:100%;
 }
 
 .profile-img .fileRemove {
@@ -45,6 +47,8 @@
     opacity: 0;
     right: 0;
     top: 0;
+    width:100%;
+    height:100%;
 }
 
 
