--- a/src/main/webapp/resources/css/myvideos.css
+++ b/src/main/webapp/resources/css/myvideos.css
@@ -120,6 +120,35 @@ h2:after {
   transform: translateZ(0);
   transition: 0.3s;
 }
+
+
+#contentOfVideo {
+  margin: 20px;
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.8);
+  transform-origin: center top;
+  transform-style: preserve-3d;
+  transform: translateZ(0);
+  transition: 0.3s;
+}
+.parentOfContentOfVideo{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.childOfContentOfVideo{
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    padding-right: 50px; /* Increase/decrease this value for cross-browser compatibility */
+    box-sizing: content-box; /* So the width will be 100% + 17px */
+}
+
+
+
 .cards .card img,
 .news .card img {
   width: 100%;
@@ -224,6 +253,9 @@ h2:after {
 }
 
 
+.contentOfVideo {
+  overflow: scroll;
+}
 
 
 
