--- a/src/main/webapp/resources/css/myvideos.css
+++ b/src/main/webapp/resources/css/myvideos.css
@@ -143,7 +143,8 @@ h2:after {
     width: 100%;
     height: 100%;
     overflow-y: scroll;
-    padding-right: 50px; /* Increase/decrease this value for cross-browser compatibility */
+    padding-right: 1.2rem;
+    padding-bottom: 1rem; /* Increase/decrease this value for cross-browser compatibility */
     box-sizing: content-box; /* So the width will be 100% + 17px */
 }
 
