--- a/src/main/webapp/resources/css/navbar.css
+++ b/src/main/webapp/resources/css/navbar.css
@@ -13,36 +13,37 @@ body {
 
 /* Navbar section */
 
-.nav {
+.navInsideNavbarjs {
     width: 100%;
     height: 65px;
+    
     line-height: 65px;
     text-align: center;
 }
 
-.nav div.logo {
+.navInsideNavbarjs div.logo {
     float: left;
     width: auto;
     height: auto;
     padding-left: 3rem;
 }
 
-.nav div.logo a {
+.navInsideNavbarjs div.logo a {
     text-decoration: none;
     color: #fff;
     font-size: 2.5rem;
 }
 
-.nav div.logo a:hover {
+.navInsideNavbarjs div.logo a:hover {
     color: #00E676;
 }
 
-.nav div.main_list {
+.navInsideNavbarjs div.main_list {
     height: 65px;
     float: right;
 }
 
-.nav div.main_list ul {
+.navInsideNavbarjs div.main_list ul {
     width: 100%;
     height: 65px;
     display: flex;
@@ -51,21 +52,21 @@ body {
     padding: 0;
 }
 
-.nav div.main_list ul li {
+.navInsideNavbarjs div.main_list ul li {
     width: auto;
     height: 65px;
     padding: 0;
     padding-right: 3rem;
 }
 
-.nav div.main_list ul li a {
+.navInsideNavbarjs div.main_list ul li a {
     text-decoration: none;
     color: #fff;
     line-height: 65px;
     font-size: 2.4rem;
 }
 
-.nav div.main_list ul li a:hover {
+.navInsideNavbarjs div.main_list ul li a:hover {
     color: #00E676;
 }
 
@@ -84,7 +85,7 @@ body {
     display: none;
 }
 
-.nav {
+.navInsideNavbarjs {
     padding-top: 20px;
     padding-bottom: 20px;
     -webkit-transition: all 0.4s ease;
@@ -104,19 +105,19 @@ body {
     .navTrigger {
         display: block;
     }
-    .nav div.logo {
+    .navInsideNavbarjs div.logo {
         margin-left: 15px;
     }
-    .nav div.main_list {
+    .navInsideNavbarjs div.main_list {
         width: 100%;
         height: 0;
         overflow: hidden;
     }
-    .nav div.show_list {
+    .navInsideNavbarjs div.show_list {
         height: auto;
         display: none;
     }
-    .nav div.main_list ul {
+    .navInsideNavbarjs div.main_list ul {
         flex-direction: column;
         width: 100%;
         height: 100vh;
@@ -127,17 +128,17 @@ body {
         /*same background color of navbar*/
         background-position: center top;
     }
-    .nav div.main_list ul li {
+    .navInsideNavbarjs div.main_list ul li {
         width: 100%;
         text-align: right;
     }
-    .nav div.main_list ul li a {
+    .navInsideNavbarjs div.main_list ul li a {
         text-align: center;
         width: 100%;
         font-size: 3rem;
         padding: 20px;
     }
-    .nav div.media_button {
+    .navInsideNavbarjs div.media_button {
         display: block;
     }
 }
