--- a/src/main/webapp/resources/css/navbar.css
+++ b/src/main/webapp/resources/css/navbar.css
@@ -16,9 +16,10 @@ body {
 .navInsideNavbarjs {
     width: 100%;
     height: 65px;
-    
+    position:relative;
     line-height: 65px;
     text-align: center;
+    z-index: 9999;
 }
 
 .navInsideNavbarjs div.logo {
@@ -82,7 +83,7 @@ body {
 }
 
 .navTrigger {
-    display: none;
+	display:none;
 }
 
 .navInsideNavbarjs {
@@ -131,6 +132,7 @@ body {
     .navInsideNavbarjs div.main_list ul li {
         width: 100%;
         text-align: right;
+        z-index: 1;
     }
     .navInsideNavbarjs div.main_list ul li a {
         text-align: center;
@@ -151,11 +153,9 @@ body {
     cursor: pointer;
     width: 30px;
     height: 25px;
-    margin: auto;
+    margin-top: 2rem;
     position: absolute;
     right: 30px;
-    top: 0;
-    bottom: 0;
 }
 
 .navTrigger i {
